force-app/main/default/objects/BMCServiceDesk__CMDB_Class_Mapping_Criteria__c/BMCServiceDesk__CMDB_Class_Mapping_Criteria__c.object-meta.xml
<CustomObject>
    <description>Stores criteria for the Rule Based Asset classes.</description>
    <label>CMDB Class Mapping Criteria</label>
    <nameField>
        <label>CMDB Class Mapping Criteria #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CMDB Class Mapping Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>