force-app/main/default/objects/BMCServiceDesk__CMDB_Class_Mapping_Criteria__c/fields/BMCServiceDesk__Field_Info__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Field_Info__c</fullName>
    <label>Field Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>