force-app/main/default/objects/BMCServiceDesk__CMDB_Class_Mapping_Criteria__c/fields/BMCServiceDesk__FKCMDB_Class__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKCMDB_Class__c</fullName>
    <label>CMDB Class</label>
    <referenceTo>BMCServiceDesk__CMDB_Class__c</referenceTo>
    <relationshipLabel>CMDB Class Mapping Criterias</relationshipLabel>
    <relationshipName>CMDB_Class_Mapping_Criterias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>