force-app/main/default/objects/BMCServiceDesk__CMDB_Class_Mapping_Criteria__c/fields/BMCServiceDesk__Grouping_Operator__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Grouping_Operator__c</fullName>
    <label>Grouping Operator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>