force-app/main/default/objects/BMCServiceDesk__CMDB_Class_Mapping_Criteria__c/fields/BMCServiceDesk__Operator__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Operator__c</fullName>
    <label>Operator</label>
    <length>80</length>
    <type>Text</type>
</CustomField>