force-app/main/default/objects/BMCServiceDesk__CMDB_Class_Mapping_Criteria__c/fields/BMCServiceDesk__Sequence_Id__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Sequence_Id__c</fullName>
    <description>This field is used for upserting the records.</description>
    <externalId>true</externalId>
    <label>Sequence Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>